<resources>
    <string name="app_name">Kinect Logger</string>
    <string name="therapist_activity_title">Agregar un nuevo perfil</string>
    <string name="patient_activity_title">Agregar un nuevo paciente</string>
    <string name="save_button">Guardar</string>

    <string name="patient_manager_activity_title">Agregar un paciente nuevo</string>
    <string name="patient_name_label">Nombre del paciente</string>
    <string name="patient_lastname_label">Apellido paterno</string>
    <string name="patient_lastname2_label">Apellido materno</string>
    <string name="birthday_label">Fecha de nacimiento</string>

    <string name="therapist_name_label">Nombre de la terapeuta</string>
    <string name="therapist_lastname_hint">Ej. Cthaeh</string>
    <string name="therapist_lastname2_hint">Ej. Teren</string>
    <string name="therapist_name_hint">Ej. Lorren</string>

    <string name="patient_name_hint">Ej. Lerand</string>
    <string name="patient_lastname_hint">Ej. Alveron</string>
    <string name="patient_lastname2_hint">Ej. Threpe</string>

    <string name="activity_camera_intent_photo_uri_found">Se encontró el URI de la foto</string>
    <string name="activity_camera_intent_photo_uri_not_found">No se encontró el URI de la foto</string>
    <string name="warning_camera_intent_canceled">La grabación fue cancelada por el usuario.</string>
    <string name="error_could_not_take_photo">Hay un problema con la cámara ¡Lo sentimos mucho por este inconveniente!</string>
    <string name="error_sth_went_wrong">Algo salió mal. Por favor intente de nuevo</string>
    <string name="error_sd_card_not_mounted">Se requiere memoria externa. Presumiblemente, su tarjeta SD no está disponible actualmente.</string>

    <string name="button_action_good">Bien</string>
    <string name="button_action_bad">Mal</string>
    <string name="button_action_inhibition">Inhibición</string>
    <string name="warning_fields_incomplete">Por favor, llena todos los campos.</string>

    <string name="action_finish_session">Terminar Sesión</string>
    <string name="action_settings">Ajustes</string>

    <string name="settings_reflex_ridge_title">Ajuste de Cumbre de Reflejos</string>

    <string name="reflex_ridge_status_delay_time_hint">Tiempo de espera en segundos para el estado</string>

    <string name="level_selector_title">Selecciona un nivel</string>
    <string name="general_time_title">Ingresa el tiempo general</string>
    <string name="points_title">Ingresa el puntaje obtenido</string>
    <string name="confirmation_title">Confirmación</string>
    <string name="general_time_invalid_toast">Ingresa un tiempo valido</string>
    <string name="confirmation_message" formatted="false">Estos son los datos seleccionados, al confirmarlos empieza a correr el tiempo.\nNivel: %1$d\nTiempo general: %2$d s</string>
    <string name="confirmation_message_no_time" formatted="false">Estos son los datos seleccionados, al confirmarlos empieza a correr el tiempo.\nNivel: %1$d</string>

    <string name="add_therapist">Añadir terapeuta</string>
    <string name="no_therapists">No se han encontrado terapeutas</string>
    <string name="add_patient">Añadir paciente</string>
    <string name="no_patients">No se han encontrado pacientes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_next_button">Siguiente</string>
    <string name="fragment_back_button">Atras</string>
    <string name="fragment_cancel_button">Cancelar</string>
    <string name="fragment_start_button">Empezar</string>
    <string name="fragment_finish_button">Terminar</string>
    <string name="finish_round">Finalizar Ronda</string>

    <string name="button_play">Jugar</string>
    <string name="text_view_title_dummy">Titulo</string>

    <string name="river_rush_title">Río Abajo</string>
    <string name="rally_ball_title">Carambola</string>
    <string name="reflex_ridge_title">Cumbre de Reflejos</string>
    <string name="leaks_title">Tapagrietas</string>

    <string name="game_selector_title">Juegos</string>
    <string name="patients_title">Pacientes</string>
    <string name="therapist_title">Terapeutas</string>
</resources>


