<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientManagerActivity">

    <TextView
        android:id="@+id/patientNameTextView"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/patient_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/patientNameTextInputLayout"
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientNameTextView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_name_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/patientLastnameTextView"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/patient_lastname_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientNameTextInputLayout" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/patientLastNameTextInputLayout"
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientLastnameTextView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patientLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_lastname_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/patientLastname2TextView"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/patient_lastname2_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientLastNameTextInputLayout" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/patientLastname2TextView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patientLastname2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_lastname2_hint" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="329dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_box"
        android:src="@drawable/profileimageboy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>