<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TherapistManagerActivity">
    <TextView
        android:id="@+id/textview_therapist_name"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/therapist_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_therapist_name"
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_therapist_name"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_therapist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/therapist_name_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_therapist_lastname"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/patient_lastname_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_layout_therapist_name" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_layout_therapist_lastname"
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_therapist_lastname">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_therapist_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/therapist_lastname_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_therapist_lastname_2"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/patient_lastname2_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_layout_therapist_lastname" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="514dp"
        android:layout_height="58dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_therapist_lastname_2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_therapist_lastname_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/therapist_lastname2_hint"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/image_view_therapist"
        android:layout_width="300dp"
        android:layout_height="329dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_box"
        android:src="@drawable/therapist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:src="@drawable/ic_action_camera"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

</android.support.constraint.ConstraintLayout>